--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@mui/material": "^5.15.11",
     "axios": "^1.6.7",
     "i18next": "^23.10.0",
+    "react-i18next": "^14.1.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.2"
   }
